fix: correct Dockerfile yarn commands for deployment
- Remove invalid --production=false option from yarn install
- Fix production stage to use correct --production flag
- Add curl to production image for health checks
- Add comprehensive deployment guide with all environment variables
- Update build scripts for better Prisma generation handling

Fixes deployment build failures due to invalid yarn options

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "postbuild": "prisma generate",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && yarn prisma generate",
     "prestart:prod": "yarn build",
     "deploy": "yarn install --frozen-lockfile && yarn build && yarn start:prod",
     "db:generate": "prisma generate",
