--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Documentation files
 *.md
 !README.md
+!DEPLOYMENT.md
 
 # Test files and scripts
 test_*.md
