--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "22.x",
+    "npm": ">=8.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -15,9 +20,12 @@
     "postbuild": "prisma generate",
     "prebuild": "rimraf dist && yarn prisma generate",
     "prestart:prod": "yarn build",
-    "deploy": "yarn install --frozen-lockfile && yarn build && yarn start:prod",
+    "deploy": "yarn install && yarn build && yarn start:prod",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate deploy",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:push:prod": "prisma db push",
+    "db:studio:prod": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -27,14 +35,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.19",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.19",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.19",
     "@nestjs/schedule": "^6.0.0",
-    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.9.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -50,9 +58,9 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.19",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -74,7 +82,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.97.1"
   },
   "jest": {
     "moduleFileExtensions": [
