--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "engines": {
     "node": "20.x",
-    "yarn": ">=1.22.0"
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "build": "nest build",
@@ -18,9 +18,9 @@
     "start:prod": "node dist/main",
     "postbuild": "prisma generate",
     "prebuild": "rimraf dist && npx prisma generate",
-    "prestart:prod": "yarn build",
-    "deploy": "yarn install && yarn build && yarn start:prod",
-    "build:render": "yarn install && yarn build && yarn db:migrate",
+    "prestart:prod": "npm run build",
+    "deploy": "npm install && npm run build && npm run start:prod",
+    "build:render": "npm install && npm run build && npm run db:migrate",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate deploy",
     "db:migrate:prod": "prisma migrate deploy",
