--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: starter
     region: oregon
     buildCommand: npm ci && npm run build
-    startCommand: npm run db:migrate && npm run start:prod
+    startCommand: npm run start:prod
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -13,9 +13,7 @@ services:
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        fromDatabase:
-          name: boost-db
-          property: connectionString
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_EXPIRES_IN
@@ -57,9 +55,4 @@ services:
       - key: LOG_LEVEL
         value: info
 
-databases:
-  - name: boost-db
-    databaseName: boost_production
-    user: boost_user
-    plan: starter
-    region: oregon 
+ 
